<resources>
    <string name="app_name">PulseOneApp-V2</string>
    <string name="inregistrare">Inregistrare</string>
    <string name="todo">TODO</string>
    <string name="ai_uitat_parola">Ai uitat parola?</string>
    <string name="autentificare">Autentificare</string>
    <string name="logare">Logare</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="autentification">Autentification</string>
    <string name="register_here">Register Here</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="work_place">Work Place</string>
    <string name="identification_data">Identification Data</string>
    <string name="surname">Surname</string>
    <string name="id_number">ID Number</string>
    <string name="birthdate">Birthdate</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="occupation">Occupation</string>
    <string name="medical_situation">Medical Situation</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gdpr_data">GDPR Data</string>
    <string name="general_conditions">General Conditions</string>
    <string name="register">Register</string>
    <string name="regusername">Username</string>
    <string name="record_values">Record Values</string>
    <string name="pulseonelogo">pulseonelogo</string>
    <string name="my_account">My Account</string>
    <string name="recommandation">Recommandation</string>
    <string name="homepage">Homepage</string>
    <string name="alerts_notification">Alerts/Notification</string>
</resources>