<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg4"
    tools:context=".Registration"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-60dp">


    <TextView
        android:id="@+id/editTextRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="59dp"
        android:text="@string/registration"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/editTextIdentificationData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="55dp"
        android:text="@string/identification_data"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/editTextName"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:hint="@string/name"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIdentificationData"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/editTextSurname"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/surname"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextIDNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/editTextIDNumber"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/id_number"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextBirthdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

    <TextView
        android:id="@+id/editTextBirthdate"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/birthdate"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIDNumber" />

    <TextView
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/phone_number"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBirthdate" />

    <TextView
        android:id="@+id/editTextAddress"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/address"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextIdentificationData" />

    <TextView
        android:id="@+id/editTextCity"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/city"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextSurname"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <TextView
        android:id="@+id/editTextRegion"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/region"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextOccupation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toEndOf="@+id/editTextIDNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextCity" />

    <TextView
        android:id="@+id/editTextOccupation"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/occupation"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextWorkplace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextBirthdate"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegion" />

    <TextView
        android:id="@+id/editTextWorkplace"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/work_place"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextMedicalSituation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextOccupation" />

    <TextView
        android:id="@+id/editTextMedicalSituation"
        android:layout_width="152dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="190dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/medical_situation"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIdentificationData"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextRegUsername"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="326dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIdentificationData"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/editTextRegEmail"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegUsername" />

    <EditText
        android:id="@+id/editTextRegPassword"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegEmail" />

    <EditText
        android:id="@+id/editTextRegConfirmPassword"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegPassword" />

    <Switch
        android:id="@+id/switchGDPRData"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/gdpr_data"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchGeneralConditions"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="41dp"
        android:text="@string/general_conditions"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchGDPRData"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="534dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistration"
        app:layout_constraintVertical_bias="0.925" />

</androidx.constraintlayout.widget.ConstraintLayout>


