<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg4"
    android:visibility="visible"
    tools:context=".Login"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-42dp"
    tools:visibility="visible">


    <TextView
        android:id="@+id/textViewRegisterHere"
        android:layout_width="181dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/register_here"

        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistration" />

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="320dp"
        android:layout_height="76dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="820dp"
        android:text="@string/autentification"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="42sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="181dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="68dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistration"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="43dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextFields"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="192dp"
        android:layout_height="81dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962"
        app:srcCompat="@drawable/pulseonelogo"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>