<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".Homepage"
    tools:layout_editor_absoluteX="11dp"
    tools:layout_editor_absoluteY="-53dp">

    <TextView
        android:id="@+id/AlertsNotification"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/alerts_notification"
        android:textAlignment="inherit"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:drawableStartCompat="@android:drawable/stat_sys_warning"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Recommandation" />

    <TextView
        android:id="@+id/Recommandation"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/recommandation"
        android:textAlignment="inherit"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:drawableStartCompat="@android:drawable/stat_notify_sdcard_prepare"
        app:layout_constraintBottom_toTopOf="@+id/AlertsNotification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecordValues" />

    <TextView
        android:id="@+id/RecordValues"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/record_values"
        android:textAlignment="inherit"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:drawableStartCompat="@android:drawable/stat_notify_chat"
        app:layout_constraintBottom_toTopOf="@+id/Recommandation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyAccount" />

    <TextView
        android:id="@+id/Homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/homepage"
        android:textColor="@color/colorWhite"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/MyAccount"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/my_account"
        android:textAlignment="inherit"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toTopOf="@+id/RecordValues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Homepage"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="117dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/pulseonelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AlertsNotification"
        app:srcCompat="@drawable/pulseonelogo" />

</androidx.constraintlayout.widget.ConstraintLayout>